# vegamdb

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  test.py  testing.py
.github/workflows/: ci.yml  release.yml
benchmarks/: annoy_benchmark.py  ivf_benchmarks.py  persistence_test.py  stress_test.py  test_kmeans.py  test_numpy_data.py
docs/: SIMD_Optimization.md  bindingsExample.cpp  cpu_cache_colum_vs_rowvise.md  pybind11_deep_dive.md  stl_type_conversion.md
examples/: api_client.py
include/: Annoy.hpp  IVFIndex.hpp  KMeans.hpp  Utils.hpp  VectorDB.hpp  VegamDB.hpp
include/indexes/: AnnoyIndex.hpp  FlatIndex.hpp  IVFIndex.hpp  IndexBase.hpp  KMeans.hpp
include/storage/: VectorStore.hpp
include/utils/: Math.hpp
scripts/: run_tests.py  test_wheels.sh
server/: main.py
src/: Annoy.cpp  IVFIndex.cpp  KMeans.cpp  Utils.cpp  VectorDB.cpp  VegamDB.cpp  bindings.cpp  main.cpp
src/indexes/: AnnoyIndex.cpp  FlatIndex.cpp  IVFIndex.cpp  KMeans.cpp
src/storage/: VectorStore.cpp
src/utils/: Math.cpp
tests/: conftest.py  test_annoy_index.py  test_flat_index.py  test_ivf_index.py  test_persistence.py  test_vegamdb.py
vegamdb/: __init__.py  _vegamdb.pyi
